<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.projects</groupId>
    <artifactId>ProjectEPAM</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <testng.version>7.4.0</testng.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <selenium-java.version>4.1.0</selenium-java.version>
        <webdrivermanager.version>5.0.3</webdrivermanager.version>
        <assertj-core.version>3.22.0</assertj-core.version>
        <commons-configuration.version>1.10</commons-configuration.version>
        <calculator.version>1.0</calculator.version>
        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
        <checkstyle.version>9.2.1</checkstyle.version>
        <testng.configs.path>${project.build.testOutputDirectory}</testng.configs.path>

        <slf4j-simple.version>1.7.30</slf4j-simple.version>
        <lombok.version>1.18.20</lombok.version>
        <commons-io.version>2.7</commons-io.version>
        <allure-testng.version>2.13.2</allure-testng.version>
        <aspectj.version>1.9.7</aspectj.version>
        <allure-maven.version>2.10.0</allure-maven.version>
        <cucumber-version>7.2.3</cucumber-version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.epam.tat.module4</groupId>
            <artifactId>calculator</artifactId>
            <version>${calculator.version}</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium-java.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>commons-configuration</groupId>
            <artifactId>commons-configuration</artifactId>
            <version>${commons-configuration.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j-simple.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure-testng.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber-version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber-version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <suiteXmlFiles>
                        <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>
                        <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
                        https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
                    </configLocation>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>RunningAllTests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${project.basedir}/src/test/resources/suits/hw1/RunningAllTests.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>RunSumAndSubTests</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${project.basedir}/src/test/resources/suits/hw1/RunSumAndSubTests.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>RunMultAndDivTests</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${project.basedir}/src/test/resources/suits/hw1/RunMultAndDivTests.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>hw2</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${project.basedir}/src/test/resources/suits/hw2/SuiteHW2.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>hw3</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${project.basedir}/src/test/resources/suits/hw3/SuiteHW3.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>hw4</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${project.basedir}/src/test/resources/suits/hw4/SuiteHW4.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>hw5</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${project.basedir}/src/test/resources/suits/hw5/SuiteHW5.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>hw6</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${project.basedir}/src/test/resources/suits/hw6/SuiteHW6.xml</testng.suite.file>
            </properties>
        </profile>

    </profiles>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure-maven.version}</version>
            </plugin>
        </plugins>
    </reporting>

</project>